# PhyVar

./: CMakeLists.txt  LICENSE  README.md
include/: .#Utils.tpp  PhyVar.hpp  PhyVar.impl.tpp  PhyVar.tpp  PhyVarEigen.hpp  Unit.tpp
include/Core/: PhyVar.hpp  PhyVar.impl.tpp  Unit.tpp
include/Eigen/: PhyVarEigen.hpp
include/Miscellaneous/: PowerSeries.hpp  PowerSeries.tpp
src/: main.cpp
